src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --background: #fafafa;
    --foreground: #181818;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'Outfit', sans-serif;
}

body {
    background: var(--background);
    color: var(--foreground);
}

body.dark {
    background: #181818;
}

.ant-typography,
.ant-input {
    font-family: 'Outfit', sans-serif !important;
}

